# digit-bin-index

./: Cargo.toml  README.md
.github/workflows/: maturin.yml
benches/: selection_benchmark.rs
examples/: simulation.rs
src/: lib.rs  main.rs
