[package]
name = "digit-bin-index"
version = "0.2.0" 
edition = "2021"
authors = ["Lars Rönnbäck <lars.ronnback@anchormodeling.com>"] 
license = "MIT" 
description = "A high-performance, O(P) data structure for weighted random sampling of binned probabilities, ideal for large-scale simulations." 
repository = "https://github.com/Roenbaeck/digit-bin-index" 
readme = "README.md" 
keywords = ["statistics", "probability", "weighted-sampling", "simulation", "data-structure"] 
categories = ["data-structures", "algorithms", "science", "simulation"] 

[dependencies]
fraction = "0.15"
rand = "0.9"
roaring = "0.11"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "selection_benchmark"
harness = false

